test/corpus/L1/positive/keyword-single.st
"---
kind: positive
section: message.keyword
note: single keyword message with one argument
---"
x at: 1
