test/corpus/L1/negative/keyword-no-arg.st
"---
kind: negative
section: error.keyword-no-arg
codes: E_KEYWORD_NO_ARG
note: keyword message keyword with no following argument expression
---"
x at:
